--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   firebase_core: ^2.3.0
+  firebase_auth: ^4.1.3
+  firebase_database: ^10.0.6
+  cloud_firestore: ^4.1.0
 
 dev_dependencies:
   flutter_test:
